--- a/styl.css
+++ b/styl.css
@@ -1,24 +1,45 @@
+body
+{
+	font-family:Arial;
+	background-color:#BC4242;
+	color: white;
+	width: 100%;
+	height: 100%;
+	padding:0;
+	margin:0;
+}
+
 header
 {
-	witdh: 100%;
-	background-color:green;
-	color;white;
 	text-align:center;
+	font-size: 32px;
+	text-transform: uppercase;
+	background-color: black;
+	height: 100px;
+	padding: 40px 20px;
 }
 
 main
 {
-	witdh: 100px;
-	height:500px;
-	background-color:grey;
 	color;white;
 	text-align:center;
+	text-transform: uppercase;
+	font-size: 26px;
 }
 
-footer
+button
 {
-	witdh: 100%;
-	background-color:green;
-	color;white;
-	text-align:center;
+    padding: 20px;
+    margin: 40px;
+    background-color: white;
+    border: solid;
+    border-color: black;
+    border-radius: 10px;
+	text-transform: uppercase;
+	font-size: 22px;
+}
+
+button:hover
+{
+    background-color: lightblue;
 }
