--- a/styl.css
+++ b/styl.css
@@ -1,6 +1,6 @@
 body
 {
-	font-family:Arial;
+	font-family:'Courier New', Courier, monospace;
 	background-color:#BC4242;
 	color: white;
 	width: 100%;
