--- a/styl.css
+++ b/styl.css
@@ -1,6 +1,6 @@
 body
 {
-	font-family:'Courier New', Courier, monospace;
+	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 	background-color:#BC4242;
 	color: white;
 	width: 100%;
